--- a/.github/workflows/abc-integration.yml
+++ b/.github/workflows/abc-integration.yml
@@ -32,12 +32,12 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential bison flex cmake libreadline-dev
+          sudo apt-get install -y build-essential cmake libreadline-dev
 
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          brew install bison flex cmake readline
+          brew install bison flex
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
